--- a/index.html
+++ b/index.html
@@ -1152,7 +1152,7 @@
                             <!-- Twitch Live Stream -->
                             <iframe
                                 id="twitch-iframe"
-                                src="https://player.twitch.tv/?channel=plantvoicelabs&parent=plantvoicelabs.com&parent=www.plantvoicelabs.com&parent=localhost&muted=true&autoplay=true"
+                                src="https://player.twitch.tv/?channel=plantvoicelabs&parent=plantvoicelabs.com&parent=dashboard.plantvoicelabs.com&parent=localhost&muted=true&autoplay=true"
                                 width="100%"
                                 height="100%"
                                 allowfullscreen
