--- a/index.html
+++ b/index.html
@@ -1062,7 +1062,7 @@
             justify-content: space-between;
             height: 70px;
         ">
-            <a href="index.html" style="
+            <a href="plantvoicelabs.com" style="
                 display: flex;
                 align-items: center;
                 gap: 10px;
@@ -1074,7 +1074,7 @@
                 <img src="logo.png" alt="Plant Voice Labs" style="width: 32px; height: 32px; border-radius: 8px; background: #18181C;">
                 <span>Plant Voice Labs</span>
             </a>
-            <a href="index.html" style="
+            <a href="plantvoicelabs.com" style="
                 padding: 8px 16px;
                 font-size: 14px;
                 font-weight: 500;
